Cleanup test in spring-shell-core
Signed-off-by: Piotr Olaszewski <piotr.olaszewski@thulium.pl>